=== Version 0.9.0
* Fixes
  * Fixed issue when using the page and element accessors for html 5 elements.

=== Version 0.8.11
* Enhancements
  * Updated to use the latest selenium-webdriver 2.33.0

=== Version 0.8.10 / 2013-5-3
* Enhancements
  * Updated populate_page_with to also check if the element is visible prior to setting value
  * Updated to use the latest watir-webdriver 0.6.4

=== Version 0.8.9 / 2013-4-13
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.3
  * Updated to use the latest selenium-webdriver 2.32.1
* Fixes
  * Fixed an issue when you try to find an element using no identifier (Thanks Alex Rodionov)

=== Version 0.8.8 / 2013-4-5
* Enhancements
  * Added callback to widget classes to allow them to define their own accessors
  * Added more support for using css when locating elements using Watir-webdriver (Neal Lindsay)

=== Version 0.8.7 / 2013-3-31
* Enhancements
  * Added ability to find elements using any valid attribute

=== Version 0.8.6.1 / 2013-3-4
* Enhancements
  * Added lable locators for checkbox, text area, select list, radio button and file field (Thanks Alex Rodionov)
  * Updated to use the latest selenium-webdriver 2.31.0
  * Updated to use the latest page_navigation 0.7

=== Version 0.8.6 / 2013-2-27
* Enhancements
  * Added support for the svg element
* Fixes
  * Fixed issue with nested generic element calls

=== Version 0.8.5 / 2013-2-21
* Enhancements
  * Updated to use the latest selenium-webdriver 2.30 - support for Firefox 19

=== Version 0.8.4 / 2013-1-26
* Enhancements
  * Extracted navigational methods into new gem named page_navigation

=== Version 0.8.3 / 2013-1-22
* Enhancements
  * Updated to use the latest selenium-webdriver 2.29
  * Added :using_params parameter to both on_page and if_page methods
* Fixes
  * Fixed issue where has_expected_title? displays misleading error message (X Zhang)
  * Fixed issue when getting basic Element element when using Selenium