@@ -1,4 +1,11 @@
 === Version 0.9.0
+* Enhancements
+  * Added plural _elements methods for the following types:
+    * area
+    * canvas
+    * audio
+    * video
+    * svg
 * Fixes
   * Fixed issue when using the page and element accessors for html 5 elements.
 
